# cs149

./: .gitignore
A1/: README.md  matrixmult.c
A2/: README.md  matrixmult_parallel  matrixmult_parallel.c  time_demo  time_demo.c
A2/test/: A.txt
A3/: README.md  matrixmult  matrixmult_multiw  matrixmult_multiw.c  matrixmult_parallel.c
A4/: README.md  matrixmult_multiw_deep.c  matrixmult_parallel.c
A5/: README.md  matrixmult_multiwa.c  matrixmult_parallel.c
A6/: README.md  matrixmult_multiwa.c  matrixmult_threaded.c
BONUS/A2/: README.md  matrixmult_parallel.c
BONUS/A2/test/: W.txt
BONUS/A3/: README.md  matrixmult_multiw.c  matrixmult_parallel.c
BONUS/A4/: R1.txt  README.md  matrixmult_multiw_deep.c  matrixmult_parallel.c
BONUS/A5/: README.md  matrixmult_multiwa.c  matrixmult_parallel.c
BONUS2/A4/: R1.txt  README.md  matrixmult_multiw_deep.c  matrixmult_parallel.c
BONUS2/A4/impl/: prog1.c  prog2.c
WS1/: 1_15.c  1_16.c  1_17.c  1_18.c  1_19.c  1_20.c
WS10/: ItemToPurchase.h  main.c
WS11/: 8_14.c
WS12/: q4.c  q5.c  q6.c
WS2/: 2_25.c  2_29.c  2_32.c  2_34.c  3_22.c  out  out1  out2
WS3/: 4_14.c  4_16.c  5_16.c  5_18.c  5_19.c  5_23.c  5_24.c
WS4/: 5_22.c  6_20.c  6_30.c  CMakeLists.txt
WS4/6_20/: 6_20.c  LapsToMiles.c  LapsToMiles.h
WS4/6_30/: 6_30.c  MaxNumber.c  MaxNumber.h  MinNumber.c  MinNumber.h
WS5/: 5_26.c  6_28.c  ws5.c
WS6/: 5_27.c  6_34.c  test1.c
WS7/: 6_24.c  lseek_example.c
WS8/: 6_27.c  mycat.c
WS9/: 9_5.c
